fix urlbar border, use z-index instead of opacity

--- a/userChrome.css
+++ b/userChrome.css
@@ -1,7 +1,5 @@
 :root {
-  /* Appmenu: Reduce item padding */
   --arrowpanel-menuitem-padding-block: 4px 8px !important;
-  /* Tabbar: reduce tab margin */
   --tab-block-margin: 4px 3px !important;
 }
 
@@ -39,14 +37,14 @@
 	padding-block: 3px 3px !important;
 }
 
-/* Tab: Reduce height */
+
+
+/* make entire tab bar compact, reduce height, ensure things don't conflict */
 .tabbrowser-tab {
 	min-height: 24px !important;
 	margin-block-start: 2px !important;
 }
-
-
-/* Tab: Ensure tab height doesn't augment when arrowscrollbox is visible  */ 
+ 
 #tabbrowser-arrowscrollbox {
 	--tab-min-height: 31px !important;
 	max-height: var(--tab-min-height);
@@ -61,7 +59,6 @@
 	background-color: rgba(100,100,100,0.) !important;
 	fill: rgb(40,200,64) !important;
 }
-
 
 #tabs-newtab-button .toolbarbutton-icon/*, #new-tab-button */ {
 	border-radius: 4px !important;
@@ -83,44 +80,35 @@
 }
 
 
-/* Tab: Attention icon */
+/* some compact mode fixes */
 .tabbrowser-tab:is([image], [pinned]) > .tab-stack > .tab-content[attention]:not([selected="true"]), .tabbrowser-tab > .tab-stack > .tab-content[pinned][titlechanged]:not([selected="true"]) {
   background-position-x: left 2px !important;
   background-position-y: bottom 12.5px !important;
 }
-  
-/* URLBar: Fix vertical alignment */
+
 #urlbar[breakout=true]:not([open="true"]) {
   --urlbar-height: 20px !important;
   --urlbar-toolbar-height: 24px !important;
-margin-block-start: -2px !important;	  
+  margin-block-start: -2px !important;	  
 }
-  
-/* URLBar: Fix URL address vertical aligment when megabar is open */
+
 #urlbar[breakout=true][open="true"] {
   --urlbar-toolbar-height: 30px !important;
 }
 
- 
-  
-/* Searchbar: Ensure toolbar height doesn't augment when searchbar is visible */
-#urlbar-container, 
-#search-container {
+#urlbar-container, #search-container {
   padding-block: 0 !important;
 }
-  
-/* Searchbar: Make sure the min-height of the input is the same as the popup */
+
 #search-container {
   min-width: 192px !important;
 }
-  
-/* Toolbar: Reduce spacing */
+
 #urlbar-container {
   --urlbar-container-height: 30px !important;
   margin-top: 0 !important;
 }
-  
-/* Reload Button: Fix vertical alignment */
+
 #reload-button {
   margin-block-start: -2px !important;
 }
@@ -135,16 +123,13 @@ margin-block-start: -2px !important;
 }
 
 
-/* AUTOHIDE NAVBAR */
-
-
+/* autohide navbar */
 #nav-bar:not([customizing]) {
   visibility: visible;
   margin-top: -34px;
   transition-delay: 1s;
   filter: alpha(opacity=0);
-  opacity: 0;
-  /* transition: visibility, ease 0.30s, margin-top, ease 0.30s, opacity, ease 0.05s, rotate, ease 0.20s !important; */
+  opacity: 100;
   transition: visibility, ease 0.00s, margin-top, ease 0.00s, opacity, ease 0.00s, rotate, ease 0.1s !important;
 }
 
@@ -155,51 +140,93 @@ margin-block-start: -2px !important;
 #titlebar:hover + #nav-bar:not([customizing]),
 #toolbar-menubar:not([inactive='true']) ~ #nav-bar:not([customizing]) {
   visibility: visible;
-
   margin-top: 0px;
   filter: alpha(opacity=100);
   opacity: 100;
-  margin-bottom: -0.2px;
+  margin-bottom: 0 !important;
+  /* margin-bottom: -0.2px; */
 }
 
 #tabbrowser-tabs {
   visibility: visible !important;
 }
 
-/*
-#PersonalToolbar {
-  margin-top: 0px;
-}
-*/
 
 #nav-bar .toolbarbutton-1[open='true'] {
   visibility: visible;
   opacity: 100;
 }
 
-
+/* remove buttons */
 #alltabs-button {
   display: none;
   visibility: hidden;
 }
 
-/* fix colour of url bar */
+/* light/dark mode colours */
 @media(prefers-color-scheme: dark) {
-  #urlbar-input-container, #remote-control-box, #urlbar-background {
-    background-color: #181825 !important;
+  #urlbar-input-container, #remote-control-box {
+    background-color: black !important;
+  }
+  
+  #urlbar-background {
+    background-color: #181825;
   }
   
   #titlebar, #nav-bar, #PersonalToolbar {
     background-color: black !important;
   }
+
+  #tabbrowser-tabs, #TabsToolbar, .toolbar-items, #TabsToolbar-customization-target {
+    background-color: black !important;
+  }
 }
 
 @media(prefers-color-scheme: light) {
-  #urlbar-input-container, #remote-control-box, #urlbar-background {
+  #urlbar-input-container, #remote-control-box {
+    background-color: white !important;
+    box-shadow: 0;
+  }
+
+  #urlbar-input-container:is([focused="true"], [open]) {
+    background-color: white !important;
+    text-shadow: none !important;
+    box-shadow: 0px 0px !important;
+  }
+
+  #urlbar-background {
     background-color: #e6e9ef !important;
   }
   
   #titlebar, #nav-bar, #PersonalToolbar {
     background-color: white !important;
   }
+
+  #tabbrowser-tabs, #TabsToolbar, .toolbar-items, #TabsToolbar-customization-target {
+    background-color: white !important;
+  }
+}
+
+/* remove outline colour around url bar */
+#urlbar:is([focused="true"]) > #urlbar-background, #seachbar:focus-within {
+  box-shadow: none !important;
+  text-shadow: none !important;
+  outline: none !important;
+}
+
+/* change font! */
+#urlbar {
+  font-family: "Dank Mono" !important;
+  font-weight: 400 !important;
+  font-size: 16px !important;
+}
+
+#tabbrowser-tabs, #TabsToolbar, .toolbar-items, #TabsToolbar-customization-target {
+  position: absolute !important;
+  z-index: 100000 !important;
+}
+
+#urlbar {
+  position: absolute !important;
+  z-index: 1000 !important;
 }
